# RMUASD

./: .gitignore  README.md  mavlink_lora  px4_init  serial2udp.sh  set_ros_ip.sh
ClientNode/: CMakeLists.txt  Client.py  package.xml
ClientNode/launch/: prog.launch
GCS/: CMakeLists.txt  GCS.py  GroundControl.launch  dockingstation.py  drone.py  package.xml
GCS/launch/: GroundControl.launch  prog.launch
GCS/msg/: DroneInfo.msg  DronePath.msg  DroneState.msg
GCS/scripts/: GCS.py  drone.py
GCS_test/: arm_drone.py  drone_cmd.py  gcs_simple.py  rtcm_node.py
Pathplaning/: 2-layer-connected.kml  AStar_1.py  CMakeLists.txt  coordinate.py  main.py  path_planner.py  pathplanner_node.py  setup.py  stream_lines.py  testfile.kml  transverse_mercator.py  vector_field_ex.py
Telemetry Node/: CMakeLists.txt  package.xml
Telemetry Node/launch/: prog.launch
Telemetry Node/scripts/: TelemetryNode.py
bag_analyser/: CMakeLists.txt  package.xml  setup.py
bag_analyser/launch/: prog.launch
bag_analyser/scripts/: analyser_node.py  kalman.py  kalman3.py  kalman_acc.py  utm.py
blood_logs/: log_126_2018-11-5-13-50-22.ulg  log_190_2018-11-28-11-59-20.ulg  log_191_2018-11-28-12-00-00.ulg  log_192_2018-11-28-12-14-36.ulg  log_193_2018-11-28-12-18-34.ulg  log_194_2018-11-28-12-19-12.ulg  (+163 more)
drone_handler/: CMakeLists.txt  package.xml  setup.py
drone_handler/launch/: prog.launch
drone_handler/scripts/: drone.py  drone_handler_node.py  flight_modes.py  manual_mission.py
gcs/: CMakeLists.txt  CMakeLists.txt.user.80a767c  package.xml  setup.py
gcs/include/: DroneDeconflict.hpp  DronesAndDocks.hpp  TextCsvReader.hpp
gcs/launch/: GroundControl.launch  NoDroneDecon.launch  NoGCS.launch  NoGCSorDroneDecon.launch  prog.launch
gcs/msg/: DroneInfo.msg  DronePath.msg  DroneSingleValue.msg  DroneState.msg  GPS.msg  NiceInfo.msg  UTMDrone.msg  inCollision.msg  moveTo.msg
gcs/scripts/: dockingstation.py  drone.py  gcs_node.py  job.py  stringMsgReader.py
gcs/scripts/Settings/: DockingStationsList.txt
gcs/src/: DroneDeconflict.cpp  DronesAndDocks.cpp  main.cpp
gcs/srv/: getEta.srv  gps2distance.srv  is_coord_free.srv  pathPlan.srv  safeTakeOff.srv
internet/: CMakeLists.txt  package.xml  setup.py
internet/launch/: prog.launch
internet/script/: internet_node.py  remot3.py
internet/scripts/: internet_node.py  remot3.py
internet/srv/: getIp.srv
mavlink_lora/: CMakeLists.txt  README.md  license.txt  package.xml  setup.py
mavlink_lora/launch/: mavlink_lora.launch  mavlink_lora_sim.launch  pi_lora.launch  telem_mavlink_lora.launch
mavlink_lora/msg/: mavlink_lora_attitude.msg  mavlink_lora_command_ack.msg  mavlink_lora_command_set_mode.msg  mavlink_lora_mission_ack.msg  mavlink_lora_mission_partial_list.msg  mavlink_lora_msg.msg  mavlink_lora_new_local_acc_sp.msg  mavlink_lora_new_local_pos_sp.msg  mavlink_lora_new_local_vel_sp.msg  mavlink_lora_pos.msg  mavlink_lora_status.msg
mavlink_lora/ros/mavlink_lora/: CMakeLists.txt
mavlink_lora/ros/mavlink_lora/src/: mavlink_lora_lib.c
mavlink_lora/scripts/: RTCM.txt  arm_drone.py  mission_clear_all.py  mission_download.py  mission_set_current.py  param_list_get.py  rtcm_msg.py  rtcm_node.py  set_mode.py  upload_mission.py
mavlink_lora/src/: mavlink_lora_lib.c  mavlink_lora_lib.h  mavlink_lora_node.cpp  serial.c  serial.h
node_monitor/: CMakeLists.txt  package.xml  setup.py
node_monitor/launch/: prog.launch
node_monitor/msg/: heartbeat.msg  nodeOk.msg  nodeOkList.msg
node_monitor/scripts/: node_monitor_node.py
pathplan/: CMakeLists.txt  package.xml  setup.py
pathplan/launch/: prog.launch
pathplan/scripts/: AStar_1.py  AStar_2.py  AStar_with_dnfz.py  Collision_detector.py  Path_simplifier.py  coordinate.py  eta_estimator.py  lufthavn_1.kml  main.py  new_astar.kml  new_astar_no_simp.kml  pathplanner_node.py  simplifier_rmuast.py  vector_field_test1.tex
pathplan/srv/: pathPlan.srv
pi_monitor/: CMakeLists.txt  package.xml  setup.py
pi_monitor/launch/: prog.launch
pi_monitor/scripts/: pi_monitor_node.py
precision_landing/: CMakeLists.txt  package.xml  setup.py
precision_landing/i2c_test/: i2c_test.ino  i2c_test.py
precision_landing/launch/: prog.launch
precision_landing/scripts/: example.py  graph.py  kalman.py  kalman3.py  kalman_acc.py  kalman_acc3.py  pos_cal.py  pos_cal_ROS.py  precision_landing_node.py  precision_landing_node_serial.py  serial_printer.py  solver.py
telemetry/: CMakeLists.txt  package.xml  setup.py  supported_mission_items.txt
telemetry/launch/: prog.launch
telemetry/msg/: telemetry_cmd_retry_fail.msg  telemetry_control_commands.msg  telemetry_heartbeat_status.msg  telemetry_home_position.msg  telemetry_imu_ned.msg  telemetry_landing_target.msg  telemetry_local_position_ned.msg  telemetry_mav_mode.msg  telemetry_mission_info.msg  telemetry_statustext.msg  telemetry_vfr_hud.msg
telemetry/plans/: land.plan  local.plan  local2.plan  long_plan.plan  plan1.plan  plan12.plan  plan2.plan  short.plan  short2.plan  speed.plan  speed2.plan  test_plan.plan  test_plan2.plan
telemetry/scripts/: command_handler.py  command_lib.py  gps_collector.py  import_mission_plan.py  mavlink_defines.py  mission_handler.py  mission_lib.py  mission_node.py  telemetry_node.py  test_node.py  utm.py
telemetry/srv/: ChangeSpeed.srv  GotoWaypoint.srv  LandDrone.srv  SetHome.srv  SetMode.srv  TakeoffDrone.srv  UploadMission.srv
utm_parser/: CMakeLists.txt  Scenerio_description.txt  package.xml  setup.py
utm_parser/dummy_dnfz/: aarslev.json  blocking.json  on_top.json
utm_parser/launch/: prog.launch
utm_parser/msg/: array1d.msg  dnfz.msg
utm_parser/scripts/: Tue, 16 Oct 2018 08:27:36 +0000  client2.py  client_example.py  heading_calc.py  kml_reader.py  polygon_plot_ex.py  register_uav.py  uav_registration.txt  utm.py  utm_parser_node.py
utm_parser/srv/: get_dnfz.srv  get_rally_points.srv  get_snfz.srv  post_drone_info.srv
visualization/: CMakeLists.txt  package.xml  setup.py
visualization/launch/: prog.launch
visualization/scripts/: transverse_mercator.py  utm.py  visualization_node.py
(+88 files in other folders)
