<?xml version="1.0"?>
<package>
  <name>gcs</name>
  <version>0.0.0</version>
  <description>The rocketbot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kasper.lorenzen@gmail.com ">Kasper Høj lorenzen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
