<?xml version="1.0"?>
<package>
  <name>bag_analyser</name>
  <version>0.0.0</version>
  <description>Node that analyses ros bags</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="khans13@student.sdu.dk">Kristian Møller Hansen</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>telemetry</build_depend>
  <run_depend>telemetry</run_depend>

  <export>

  </export>
</package>
