<?xml version="1.0"?>
<package>
  <name>internet</name>
  <version>0.0.0</version>
  <description>Node to control connections to the internet</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hemi@mmmi.sdu.dk">Henrik Skov Midtiby</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
