<?xml version="1.0"?>
<package>
  <name>mavlink_lora</name>
  <version>1.0.0</version>
  <description>The mavlink_lora package</description>

  <maintainer email="kjen@mmmi.sdu.dk">Kjeld Jensen</maintainer>
  <license>BSD 3-Clause</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serial</run_depend>
</package>
