<?xml version="1.0"?>
<package>
  <name>node_monitor</name>
  <version>0.0.0</version>
  <description>Node that monitors all the other ROS nodes to see if they are responsive</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="khans13@student.sdu.dk">Kristian Møller Hansen</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>


  <export>

  </export>
</package>
