<?xml version="1.0"?>
<package>
  <name>telemetry</name>
  <version>0.0.0</version>
  <description>Node that handles most of the MAVLink communication</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kasper.lorenzen@gmail.com">Kasper Hoej lorenzen</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
